SDC-1955. Issues list cuts off the stage library name when the name is too long
Reviewed-on: https://review.streamsets.net/1525

--- a/common-ui/src/main/webapp/less/common.less
+++ b/common-ui/src/main/webapp/less/common.less
@@ -252,7 +252,7 @@ body {
   .scrollable-menu {
     height: auto;
     max-height: 400px;
-    overflow-x: hidden;
+    overflow-x: auto;
   }
 
   .form-horizontal-checkbox {
